ref/tel/test/pos/schema-with-default-value.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name with-default

document
  field name
    scalar identifier my-default-name
